framec/tests/snapshots/dart_snapshots__return_explicit.snap
---
source: framec/tests/dart_snapshots.rs
expression: "compile_fixture(\"09_return_explicit\", \"dart\")"
---
class ReturnExplicitFrameEvent {
    late String _message;
    late List<dynamic> _parameters;

    ReturnExplicitFrameEvent(String message, List<dynamic> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}


class ReturnExplicitFrameContext {
    late ReturnExplicitFrameEvent event;
    dynamic _return;
    late Map<String, dynamic> _data;
    late bool _transitioned;

    ReturnExplicitFrameContext(ReturnExplicitFrameEvent event, dynamic default_return) {
        this.event = event;
        this._return = default_return;
        this._data = <String, dynamic>{};
        this._transitioned = false;
    }
}


class ReturnExplicitCompartment {
    late String state;
    late List<dynamic> state_args;
    late Map<String, dynamic> state_vars;
    late List<dynamic> enter_args;
    late List<dynamic> exit_args;
    dynamic forward_event;
    ReturnExplicitCompartment? parent_compartment;

    ReturnExplicitCompartment(String state, [ReturnExplicitCompartment? parent_compartment = null]) {
        this.state = state;
        this.state_args = [];
        this.state_vars = <String, dynamic>{};
        this.enter_args = [];
        this.exit_args = [];
        this.forward_event = null;
        this.parent_compartment = parent_compartment;
    }

    ReturnExplicitCompartment copy() {
        final c = ReturnExplicitCompartment(this.state, this.parent_compartment);
        c.state_args = List<dynamic>.from(this.state_args);
        c.state_vars = Map<String, dynamic>.from(this.state_vars);
        c.enter_args = List<dynamic>.from(this.enter_args);
        c.exit_args = List<dynamic>.from(this.exit_args);
        c.forward_event = this.forward_event;
        return c;
    }
}


class ReturnExplicit {
    late List<ReturnExplicitCompartment> _state_stack;
    late ReturnExplicitCompartment __compartment;
    ReturnExplicitCompartment? __next_compartment;
    late List<ReturnExplicitFrameContext> _context_stack;

    ReturnExplicit() {
        this._state_stack = [];
        this._context_stack = [];
        this.__compartment = this.__prepareEnter("Judging", [], []);
        this.__next_compartment = null;
    }

    void _frame_init() {
        final __e = ReturnExplicitFrameEvent("\$>", __compartment.enter_args);
        final __ctx = ReturnExplicitFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(__e);
        _context_stack.removeLast();
    }

    factory ReturnExplicit.create() {
        final c = ReturnExplicit();
        c._frame_init();
        return c;
    }

    Map<String, List<String>> hsm_chain() {
        return {
            "Judging": ["Judging"],
        };
    }
    ReturnExplicitCompartment __prepareEnter(String leaf, List<dynamic> state_args, List<dynamic> enter_args) {
        ReturnExplicitCompartment? comp = null;
        for (final name in hsm_chain()[leaf]!) {
            final new_comp = ReturnExplicitCompartment(name);
            new_comp.state_args = List<dynamic>.from(state_args);
            new_comp.enter_args = List<dynamic>.from(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp!;
    }

    void __prepareExit(List<dynamic> exit_args) {
        ReturnExplicitCompartment? comp = __compartment;
        while (comp != null) {
            comp.exit_args = List<dynamic>.from(exit_args);
            comp = comp.parent_compartment;
        }
    }

    void __kernel(ReturnExplicitFrameEvent __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            final next_compartment = __next_compartment!;
            __next_compartment = null;
            // Exit the current (leaf) state.
            final exit_event = ReturnExplicitFrameEvent("<\$", __compartment.exit_args);
            __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            final forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                final enter_event = ReturnExplicitFrameEvent("\$>", __compartment.enter_args);
                __router(enter_event);
            } else if (forward_event._message == "\$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                final enter_event = ReturnExplicitFrameEvent("\$>", __compartment.enter_args);
                __router(enter_event);
                __router(forward_event);
            }
            for (final ctx in _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    void __router(ReturnExplicitFrameEvent __e) {
        switch (__compartment.state) {
            case "Judging":
                _state_Judging(__e, __compartment);
                break;
        }
    }

    void __transition(ReturnExplicitCompartment next_compartment) {
        __next_compartment = next_compartment;
    }

    String decide(int score) {
        final __e = ReturnExplicitFrameEvent("decide", [score]);
        final __ctx = ReturnExplicitFrameContext(__e, '');
        _context_stack.add(__ctx);
        try {
            __kernel(__e);
            return _context_stack.removeLast()._return;
        } catch (__frame_err) {
            _context_stack.removeLast();
            rethrow;
        }
    }

    void _state_Judging(ReturnExplicitFrameEvent __e, ReturnExplicitCompartment compartment) {
        if (__e._message == "decide") {
            this._s_Judging_hdl_user_decide(__e, compartment);
            return;
        }
    }

    void _s_Judging_hdl_user_decide(ReturnExplicitFrameEvent __e, ReturnExplicitCompartment compartment) {
        final score = __e._parameters[0] as int;
                        if score >= 60 {
        this._context_stack[this._context_stack.length - 1]._return = "pass";
                            return;
                        }
        this._context_stack[this._context_stack.length - 1]._return = "fail";
                        return;
    }
}
